--- a/style.css
+++ b/style.css
@@ -137,7 +137,6 @@ html, body {
   margin-right: auto;
 }
 
-
 /* ====================================================================
    6. HERO SECTION
 ============================================================ */
@@ -176,7 +175,7 @@ html, body {
 
 .hero h1 { font-size: 48px; margin-bottom: 10px; }
 .hero h2 { font-size: 26px; font-weight: 300; margin-bottom: 20px; }
-.hero-desc { font-size: 18px; margin-bottom: 25px; }
+.hero-desc { font-size: 18px; margin-bottom: 25px; color: var(--text-lightgrey); }
 
 
 /* ============================================================
