--- a/style.css
+++ b/style.css
@@ -194,7 +194,7 @@ html, body {
 .hero h2 .typed {
   position: relative; /* Position the text for the underline */
   display: inline-block; /* Ensures the underline is just under the text */
-  color: var(--text-white); /* White text color for the typed text */
+  color: var(--text-lightgrey); 
 }
 
 .hero h2 .typed::after {
