--- a/style.css
+++ b/style.css
@@ -382,8 +382,8 @@ html, body {
   display: flex;
   align-items: center;
   position: relative;
-  gap: 12px;
-  padding-left: 15px;  /* Add padding to the left to shift the icons and text a bit to the right */
+  gap: 6px;
+  padding-left: 5px;  /* Add padding to the left to shift the icons and text a bit to the right */
 }
 
 .info-header h3 {
@@ -393,10 +393,10 @@ html, body {
 .contact-icon {
   width: 46px;
   height: 46px;
-  position: center;   <!--absolute; -->
-  left: -25px;  /* Move the icon a bit closer towards the center */
+  position: absolute;
+  left: -15px;  /* Move the icon a bit closer towards the center */
   background: var(--mustard); 
-  border-radius: 50%;
+  border-radius: 40%;
   padding: 6px;
   transition: background 0.3s ease;
 }
