--- a/style.css
+++ b/style.css
@@ -383,7 +383,7 @@ html, body {
   align-items: center;
   position: relative;
   gap: 6px;
-  padding-left: 5px;  /* Add padding to the left to shift the icons and text a bit to the right */
+  padding-left: 25px;  /* Add padding to the left to shift the text a bit to the right */
 }
 
 .info-header h3 {
@@ -396,7 +396,7 @@ html, body {
   position: absolute;
   left: -15px;  /* Move the icon a bit closer towards the center */
   background: var(--mustard); 
-  border-radius: 40%;
+  border-radius: 50%;
   padding: 6px;
   transition: background 0.3s ease;
 }
