--- a/style.css
+++ b/style.css
@@ -261,9 +261,9 @@ html, body {
 /* ============================================================
    9. ABOUT ME
 ============================================================ */
-.about h2 { font-size: 30px; color: var(--text-lightgrey) !important; }
-.about h3 { font-size: 18px; color: var(--grey-label) !important; }
-.about p { font-size: 12px; color: var(--text-lightgrey) !important; }
+.about h2 { font-size: 34px; color: var(--text-lightgrey) !important; }
+.about h3 { font-size: 22px; color: var(--grey-label) !important; }
+.about p { font-size: 14px; color: var(--text-lightgrey) !important; }
 
 /* ============================================================
    10. TECH TOOLKIT
@@ -294,9 +294,9 @@ html, body {
 /* ============================================================
    11. BLOGS AND ARTICLES
 ============================================================ */
-.blog h2 {color: var(--text-lightgrey) !important;}
-.blog h3 {color: var(--grey-label) !important;}
-.blog p {color: var(--text-lightgrey)!important;}
+.blog h2 { font-size: 34px; color: var(--text-lightgrey) !important;}
+.blog h3 { font-size: 22px; color: var(--grey-label) !important;}
+.blog p { font-size: 14px; color: var(--text-lightgrey)!important;}
 
 /* ============================================================
    12. WRITING DOCUMENTATION
