--- a/style.css
+++ b/style.css
@@ -261,9 +261,9 @@ html, body {
 /* ============================================================
    9. ABOUT ME
 ============================================================ */
-.about h2 { font-size: 34px; color: var(--text-lightgrey) !important; }
-.about h3 { font-size: 22px; color: var(--grey-label) !important; }
-.about p { font-size: 14px; color: var(--text-lightgrey) !important; }
+.about h2 { font-size: 36px; color: var(--text-lightgrey) !important; }
+.about h3 { font-size: 21px; color: var(--grey-label) !important; }
+.about p { font-size: 17px; color: var(--text-lightgrey) !important; }
 
 /* ============================================================
    10. TECH TOOLKIT
@@ -294,13 +294,23 @@ html, body {
 /* ============================================================
    11. BLOGS AND ARTICLES
 ============================================================ */
-.blog h2 { font-size: 34px; color: var(--text-lightgrey) !important;}
-.blog h3 { font-size: 22px; color: var(--grey-label) !important;}
-.blog p { font-size: 14px; color: var(--text-lightgrey)!important;}
+.blog h2 { font-size: 36px; color: var(--text-lightgrey) !important;}
+.blog h3 { font-size: 21px; color: var(--grey-label) !important;}
+.blog p { font-size: 17px; color: var(--text-lightgrey)!important;}
 
 /* ============================================================
    12. WRITING DOCUMENTATION
 ============================================================ */
+
+.writing-grid { display: grid; gap: 12px; }
+
+.writing-item {
+  background: var(--bg-box);  
+  padding: 14px;
+  border-radius: 10px;
+  color: var(--text-lightgrey)!important; 
+  box-shadow: 0 6px 18px rgba(0,0,0,0.4);
+}
 
 .writing h2 {color: var(--text-lightgrey) !important;}
 .writing h3 { color: var(--grey-label) !important; }
